--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 .DS_Store
 .aider*
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+.npm
+.yarn
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Build and output
+dist/
+build/
+.cache/
